# hapax-core

./: .gitignore  CLAUDE.md  LICENSE  README.md  agent-architecture.md  operations-manual.md  pattern-guide.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: auto-fix.yml  claude-review.yml  sdlc-axiom-gate.yml  sdlc-implement.yml  sdlc-review.yml  sdlc-triage.yml  yaml-lint.yml
axioms/: capability-coverage.yaml  enforcement-sufficiency.yaml  registry.yaml
axioms/implications/: executive-function.yaml  management-governance.yaml  single-user.yaml
axioms/precedents/: contradiction-resolutions.yaml
docs/: cross-project-boundary.md  document-registry.yaml
docs/audit/: 01-shared-foundation.md  02-data-ingestion.md  03-operator-profile.md  04-health-observability.md  06-cockpit.md  07-web-layer.md  08-infrastructure.md  09-holistic.md  10-fix-plan.md
docs/design/: deliberative-governance.md  deliberative-process-analysis.md
docs/plans/: 2026-03-02-system-audit-design.md  2026-03-02-system-audit-execution.md  2026-03-03-axiom-enforcement-design.md  2026-03-03-axiom-enforcement-plan.md  2026-03-03-hapax-system-plugin-design.md  2026-03-03-hapax-system-plugin-plan.md  2026-03-04-corporate-boundary-plan.md  2026-03-04-demo-generator-design.md  2026-03-04-demo-generator-phase2-plan.md  2026-03-04-demo-generator-phase3-plan.md  (+18 more)
research/: axiom-enforcement.md
scripts/: sdlc_axiom_judge.py  sdlc_review.py  sdlc_triage.py
sdlc/: __init__.py  consistency_check.py
shared/: sdlc_github.py  sdlc_log.py
tests/: test_sdlc_triage.py
(+10 files in other folders)
